force-app/main/default/objects/Receiving_Frustrated_Freight__c/Receiving_Frustrated_Freight__c.object-meta.xml
<CustomObject>
    <label>Receiving-Frustrated Freight</label>
    <nameField>
        <displayFormat>FF-{000}</displayFormat>
        <label>Shipment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receiving-Frustrated Freights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>