force-app/main/default/objects/Receiving_Frustrated_Freight__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Receiving-Frustrated Freights</relationshipLabel>
    <relationshipName>Receiving_Frustrated_Freights</relationshipName>
    <type>Lookup</type>
</CustomField>