force-app/main/default/objects/Receiving_Frustrated_Freight__c/fields/Legacy_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Shipment__c</fullName>
    <label>Legacy Shipment #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>