force-app/main/default/objects/Receiving_Frustrated_Freight__c/fields/Match_Order__c.field-meta.xml
<CustomField>
    <fullName>Match_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Match Order #</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Receiving-Frustrated Freights</relationshipLabel>
    <relationshipName>Receiving_Frustrated_Freights</relationshipName>
    <type>Lookup</type>
</CustomField>