force-app/main/default/objects/Receiving_Frustrated_Freight__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <formula>Contact_Name__r.MiddleName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Middle Name</label>
    <type>Text</type>
</CustomField>