force-app/main/default/objects/Receiving_Frustrated_Freight__c/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <label>Shipping Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airborne</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Emery</fullName>
            </value>
            <value>
                <fullName>Federal Express</fullName>
            </value>
            <value>
                <fullName>Select Shipper</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>US Mail</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
                <isActive>false</isActive>
                <label>n/a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>