force-app/main/default/objects/Receiving_Frustrated_Freight__c/fields/Waybill__c.field-meta.xml
<CustomField>
    <fullName>Waybill__c</fullName>
    <label>Waybill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>