force-app/main/default/objects/Receiving_Frustrated_Freight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Description__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Match_Order__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Shipping_Carrier__c</columns>
    <columns>Status__c</columns>
    <columns>Waybill__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>